crates/cribo/tests/snapshots/bundled_code@function_level_module_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/function_level_module_import/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
utils = _cribo.types.SimpleNamespace(__name__='utils')
utils_calculator = _cribo.types.SimpleNamespace(__name__='utils.calculator')
utils.calculator = utils_calculator
"""Calculator module with simple operations"""
description = "A simple calculator module"
def add(a, b):
    return a + b
utils_calculator.add = add
utils_calculator.description = description
def process_data():
    calculator = utils_calculator
    result = calculator.add(5, 3)
    print(f"Result: {result}")
    print(f"Calculator description: {calculator.description}")
if __name__ == "__main__":
    process_data()
