crates/cribo/tests/snapshots/bundled_code@import_shadowing.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/import_shadowing/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
package_a = _cribo.types.SimpleNamespace(__name__='package_a')
utils = _cribo.types.SimpleNamespace(__name__='utils')
def transform(text):
    return "TOP_LEVEL_UTILS"
utils.transform = transform
package_a_processor = _cribo.types.SimpleNamespace(__name__='package_a.processor')
package_a.processor = package_a_processor
"""Package A processor that imports utils expecting package_a.utils"""
def process_a(data):
    return transform(data)
package_a_processor.process_a = process_a
package_b_processor = _cribo.types.SimpleNamespace(__name__='package_b.processor')
package_b = _cribo.types.SimpleNamespace(__name__='package_b', __initializing__=False, __initialized__=False)
package_b.processor = package_b_processor
"""Package B processor that imports utils expecting package_b.utils"""
def process_b(data):
    return transform(data)
package_b_processor.process_b = process_b
"""Test case demonstrating import shadowing issue.

This shows how the same import 'utils' resolves to the same top-level
file for all modules, even though package_a and package_b each have
their own utils.py that they might expect to use.

In Python, this behavior is "correct" - when running from the fixture
directory, 'import utils' finds the top-level utils.py for everyone.

But for a bundler, this demonstrates the challenge: without proper
context, it can't know whether 'import utils' in package_a/processor.py
was intended to import package_a/utils.py or the top-level utils.py.
"""
result_a = process_a("test")
result_b = process_b("test")
print(f"Package A result: {result_a}")
print(f"Package B result: {result_b}")
assert result_a == "TOP_LEVEL_UTILS"
assert result_b == "TOP_LEVEL_UTILS"
print("Both packages used the top-level utils module (as Python does).")
processor = package_b.processor
